TM-13284 - Mapped the rest of the elements to the menu so it can jump to the Angular Section. - Also fixed the missing height on load the page

--- a/src/main/webapp/tds/web-app/css/layout/footer-content.sass
+++ b/src/main/webapp/tds/web-app/css/layout/footer-content.sass
@@ -1,4 +1,5 @@
 .main-footer
+  display: none
   padding: 3px 18px 3px 18px !important
   div.container
     margin-right: 0
